Fix bugs with slider e.t.c.
Внесла правки:
1) Кнопки разной высоты (в хедере и в тарифах)
2) Добавить отзыв, мб 2
3) Сделать иконки без фона в блоке контакты
4) Размер в разных колонках футера разный
5) Мини текст для телефона в меню сделать белых и спустить вниз
6) Поправила смещение меню в мобилке из-за уменьшения высоты top-menu
7) Изменила мини слайдер. Добавила автоматическую нумерацию
8) Убрала слово товары из одного из заголовков
9) Поменяла логотип в футере (Москва на Москвы)

--- a/styles/header.css
+++ b/styles/header.css
@@ -649,8 +649,21 @@ button.popup-btn {
     }
 
     .menu-wrapper .header__phone-box {
+        position: relative;
         display: flex;
-        margin: 20px 0 0
+        margin: 20px 0 0;
+        padding: 0 0 15px;
+    }
+
+    .header__phone-top-text {
+        position: absolute;
+        bottom: 0;
+
+        color: #fff;
+    }
+
+    .header__phone-bottom-text {
+        color: #fff;
     }
 
     .header__top-nav .container {
@@ -674,6 +687,19 @@ button.popup-btn {
 
     .mobile-br {
         display: none;
+    }
+
+    .blackout {
+        top: 69px;
+    }
+    
+    .header .menu-wrapper {
+        height: calc(100vh - 69px);
+    }
+
+    .menu__sub-menu.submenu-mobile-active, 
+    .submenu-mobile-active .sub-submenu-mobile-active {
+        min-height: calc(100vh - 69px);
     }
 }
 
