--- a/styles/footer.css
+++ b/styles/footer.css
@@ -19,6 +19,10 @@
     font-size: var(--text-14);
 }
 
+.footer__column {
+    font-size: var(--text-14);
+}
+
 .footer__logo {
     width: 80%;
     margin: 0 0 24px;
@@ -36,7 +40,7 @@
 .footer__services-h2 {
     margin: 0 0 25px;
 
-    font-size: var(--text-15);
+    font-size: var(--text-14);
     font-family: var(--bold);
 
     color: #fff;
