Add a new functionality for types of ribbons
Добавлено медиа для каталога. Новая функциональность работает только в
рамках одного выбранного продукта. В прошлый раз, кнопка "Добавить ленту", добавляла ее для всех продуктов.

Продукты вынесены по отдельным файлам.

--- a/styles/header.css
+++ b/styles/header.css
@@ -707,7 +707,7 @@ button.popup-btn {
 
 @media(max-width: 676px) {
     
-    .common-border-button {
+    .header .common-border-button {
         position: absolute;
         right: 15px;
     }
