--- a/styles/style.css
+++ b/styles/style.css
@@ -1413,6 +1413,10 @@ PRODUCTS PAGE END
     text-decoration: none;
 }
 
+.catalog__to-order-btn.common-border-button:hover {
+    color: #fff;
+}
+
 .catalog__product-info-box {
     padding: 15px;
 
@@ -1462,10 +1466,192 @@ PRODUCTS PAGE END
     display: block;
 }
 
+.catalog__product-option-name {
+    padding: 5px 0;
+
+    font-family: var(--light);
+    font-size: var(--text-14);
+
+    color: var(--deepTaupe);
+}
+
+.catalog__product-option {
+    margin: 0 0 10px;
+    padding: 5px;
+    width: 100%;
+
+    font-size: var(--text-14);
+
+    background-color: #fff;
+    border: 1px solid var(--pastelGray);
+    color: var(--deepTaupe);
+}
+
+select.catalog__product-option  {
+    background: url('../images/arrow-down-peach.png') right 5px top 50% /5% no-repeat;
+    background-color: #fff;
+    -webkit-appearance: none;
+}
+
+.catalog__product-option:focus {
+    border: 1px solid var(--peach);
+    color: var(--horses);
+}
+
+.catalog__product-ribbon-add-delete-btns {
+    margin: 5px 0 25px;
+}
+
+.catalog__add-ribbon-btn,
+.catalog__delete-ribbon-btn {
+    display: block;
+    margin: 0 auto;
+
+    font-size: var(--text-14);
+
+    color: var(--peach);
+    border: 0px solid transparent;
+    text-decoration: none;
+}
+
+.catalog__add-ribbon-btn {
+    margin-bottom: 10px;
+}
+
 /* 1.3.CATALOG OF WREATH BLOCK END */
 
 
 /* 1.CATALOG END */
+
+
+/* 2.PRODUCTS PAGE MEDIA START */
+
+/* 1010px */
+@media(max-width: 1010px) {
+    .catalog__products_active {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .catalog__sidebar-item-count {
+        width: 48%;
+    }
+}
+
+/* 842px */
+@media(max-width: 842px) { 
+    .catalog__sidebar-item-count-units {
+        display: none;
+    }
+
+    .catalog__sidebar-item-count {
+        justify-content: flex-end;
+    }
+
+    .catalog__sidebar-item-count-num {
+        padding: 2px 9px;
+
+        background-color: var(--peach);
+        color: #fff;
+        border-radius: 20px;
+    }
+
+    .catalog__sidebar-item-count::after {
+        margin: -1px 0 0 5px;
+    }
+}
+
+/* 682px */
+@media(max-width: 682px) { 
+    .catalog__products_active {
+        grid-template-columns: 1fr;
+        width: 60%;
+    }
+
+    .catalog__sidebar {
+        width: 35%;
+    }
+}
+
+/* 488px */
+
+@media(max-width: 488px) {  
+    .catalog__wrapper {
+        display: block;
+    }
+
+    .catalog__products_active {
+        grid-template-columns: 1fr 1fr;
+        width: 100%;
+    }
+
+    .catalog__sidebar {
+        width: 100%;
+        top: 84px;
+        z-index: 1;
+
+        background-color: #fff;
+    }
+
+    .common-h2.catalog__h2 {
+        display: flex;
+        align-items: center;
+
+        font-size: var(--text-18);
+    }
+
+    .catalog__sidebar_visible .catalog__sidebar-items {
+        opacity: 1;
+        visibility: visible;
+        max-height: 900px;
+
+        transition: .5s;
+    }
+
+    .catalog__sidebar-items {
+        position: absolute;
+        width: 100%;
+        opacity: 0;
+        visibility: hidden;
+        max-height: 0;
+
+        background-color: #fff;
+        transition: .5s;
+    }
+
+    .catalog__sidebar_visible .catalog__h2::after  {
+        transform: rotate(-90deg);
+        transition: .5s;
+    }
+
+    .common-h2.catalog__h2::after {
+        content: ' ';
+        width: 20px;
+        height: 20px;
+        display: block;
+
+        background: url('../images/arrow-down-peach.png') right/80% no-repeat;
+        transition: .5s;
+    }
+
+    .catalog__sidebar-item a {
+        padding: 10px 0px;
+    }
+
+    .catalog__sidebar-item-count-num {
+        padding: 3px 5px;
+        font-size: 11px;
+    }
+
+    .catalog__product-name {
+        font-size: var(--text-14);
+
+        text-align: justify;
+        line-height: 20px;
+    }
+
+}
+
+/* 2.PRODUCTS PAGE MEDIA END */
 
 /* 
 --------------------------------------------------------------
