--- a/styles/footer.css
+++ b/styles/footer.css
@@ -96,6 +96,24 @@ a.footer__order-btn {
     .footer__contacts-item a {
         justify-content: center;
     }
+
+    .footer {
+        margin: 50px 0 0;
+        padding: 30px 0 10px;
+    }
+
+    a.footer__order-btn {
+        margin: 20px 0 0;
+    }
+
+    .footer__contacts-item a {
+        font-size: var(--text-18);
+    }
+
+    .footer__logo {
+        display: block;
+        margin: 0 auto 20px;
+    }
 }
 
 /* 600px */
@@ -108,6 +126,8 @@ a.footer__order-btn {
     .footer__contacts-item a {
         justify-content: flex-start;
     }
+
+    
 }
 
 
