--- a/styles/style.css
+++ b/styles/style.css
@@ -234,7 +234,7 @@ a.common-btn_white:visited {
 
     font-family: var(--bold);
     font-size: var(--text-48);
-    line-height: 57px;
+    line-height: 150%;
 
     color: var(--horses)
 }
@@ -244,7 +244,7 @@ a.common-btn_white:visited {
 
     font-family: var(--bold);
     font-size: var(--text-36);
-    line-height: 40px;
+    line-height: 150%;
 
     color: var(--horses);
 }
@@ -367,9 +367,21 @@ a.common-btn_white:visited {
     }
 }
 
-/* 453px */
+/* 930px */ 
+@media(max-width: 930px){
+    .common-h1,
+    .common-h2 {
+        padding: 30px 0;
+    }
+}
 
+/* 453px */
 @media(max-width: 453px){
+    .common-h1,
+    .common-h2 {
+        padding: 20px 0;
+    }
+
     .common-h2 {
         font-size: var(--text-24);
     }
@@ -792,7 +804,7 @@ ABOUT PAGE START
     }
 
     .employees__info-box {
-        flex-direction: column;
+        flex-direction: column-reverse;
     }
 
     .employees__text-box {
@@ -801,13 +813,37 @@ ABOUT PAGE START
 
     .employees__order-box {
         width: 90%;
+
+        margin: 0 0 30px;
     }
 
-    .employees__text-box :last-child {
-        margin: 0 0 52px;
-    }
 }
 
+/* 926px */
+@media (max-width: 930px) {
+    .about-company__text-box {
+        margin: 0 auto 30px;
+        padding: 0;
+
+        text-align: justify;
+    }
+
+    .why-our-company {
+        margin: 30px 0 0;
+    }
+
+    .why-our-company__p {
+        margin: 0 0 30px;
+
+        text-align: justify;
+    }
+
+    .employees__p:last-child {
+        margin: 0;
+    }
+
+    
+}
 /* 625px */
 
 @media(max-width: 625px) {
